Revert "gui: try to fix gradient on safari"
This reverts commit cb95d6557e460105dd6d81430be9c437bc4fa22f.

--- a/gui/src/index.css
+++ b/gui/src/index.css
@@ -122,22 +122,22 @@ All colors MUST be HSL.
     @apply border-border;
   }
 
-  html,
+  html {
+    background-color: hsl(var(--background));
+    background-image: var(--gradient-overlay);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
+  }
+
   body {
     @apply text-foreground;
     background-color: hsl(var(--background));
-    min-height: 100%;
-    position: relative;
-  }
-
-  body::before {
-    content: '';
-    position: fixed;
-    inset: -50vh;
-    z-index: -1;
     background-image: var(--gradient-overlay);
-    background-size: cover;
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    pointer-events: none;
+    background-size: cover;
+    min-height: 100%;
   }
 }
